  and "\v". This allows very long pages without a "trap botch" error,
  although vertical motions on such pages may require multiple "\v"
  commands.
* [nt]roff: The "\n(.S" predefined number register has been removed again
  since it conflicts with use of this name by "dot -Tpic". (The "\n[.tabs]"
  register continues to be available with the same semantics.)

Release 060813
* [nt]roff: A new type of traps is available: output-line traps. They are
  set with the new "\P" escape sequence and are invoked when the line that
  contains the corresponding sequence has been output.
* [nt]roff: The ".index" request has been added to determine the position
  of a string within a string or macro.
* [nt]roff: Floating-point registers have been introduced; they can be
  created and modified with the ".nrf" request and are otherwise like
  standard integer number registers, with which they share a common name
  space.
* [nt]roff: The ".if f expr" condition has been introduced to evaluate
  an expression with floating-point computation.
* [nt]roff: Exponential notation, as in "1e+10", is now supported in
  numerical expressions.
* [nt]roff: Debugging requests for watching macros, strings, and number
  registers have been added.
* [nt]roff: The ".errprint" request has been added to write custom strings
  in the same format as internal error messages.
* [nt]roff: The ".cp" request has been added to control compatibility with
  groff.
* [nt]roff: The "-mg" macro package has been added for improved support of
  groff documents, preprocessors, and macro sets.
* [nt]roff: The ".while", ".break", and ".continue" requests have been
  added as another method to process input repeatedly.
* [nt]roff: Space characters inside parentheses in numerical expressions
  are now permissible, i.e. they are discarded and do not terminate the
  expression.
* [nt]roff: The ".char", ".fchar", and ".rchar" requests have been added
  to transform a single input character to multiple output characters.