@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	7.86 (gritter) 8/31/06";
+	"@(#)/usr/ucb/otfdump.sl	7.87 (gritter) 9/1/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  7.86 (gritter) 8/31/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 7.86 (gritter) 8/31/06";
+static const char sccsid[] USED = "@(#)dpost.sl  7.87 (gritter) 9/1/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 7.87 (gritter) 9/1/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.86 (gritter) 8/31/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.87 (gritter) 9/1/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.86 (gritter) 8/31/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.87 (gritter) 9/1/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "7.86";
+const char revision[] = "7.87";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.82 (gritter) 8/24/06
@@ -39,13 +39,13 @@ nroff.d/pt.h: *	Sccsid @(#)pt.h	1.41 (gritter) 8/12/06
 nroff.d/tw.h: * Sccsid @(#)tw.h	1.6 (gritter) 4/25/06
 troff.d/afm.c: * Sccsid @(#)afm.c	1.60 (gritter) 8/12/06
 troff.d/afm.h: * Sccsid @(#)afm.h	1.34 (gritter) 8/12/06
-troff.d/dev.h: * Sccsid @(#)dev.h	1.12 (gritter) 8/12/06
+troff.d/dev.h: * Sccsid @(#)dev.h	1.13 (gritter) 9/1/06
 troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
-troff.d/makedev.c: * Sccsid @(#)makedev.c	1.13 (gritter) 4/30/06
+troff.d/makedev.c: * Sccsid @(#)makedev.c	1.15 (gritter) 9/1/06
 troff.d/otf.c: * Sccsid @(#)otf.c	1.58 (gritter) 8/12/06
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.15 (gritter) 3/16/06
 troff.d/pt.h: * Sccsid @(#)pt.h	1.52 (gritter) 8/12/06
-troff.d/t10.c: * Sccsid @(#)t10.c	1.84 (gritter) 8/10/06
+troff.d/t10.c: * Sccsid @(#)t10.c	1.85 (gritter) 9/1/06
 troff.d/t6.c: * Sccsid @(#)t6.c	1.171 (gritter) 8/13/06
 troff.d/troff.h: * Sccsid @(#)troff.h	1.26 (gritter) 8/12/06
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.13 (gritter) 2/16/06
